--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aframe": "^0.9.2",
+    "aframe-extras": "^6.0.1",
     "aframe-react": "^4.4.0",
     "axios": "^0.19.0",
     "react": "^16.12.0",
