--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "aframe-extras": "^6.0.1",
     "aframe-react": "^4.4.0",
     "axios": "^0.19.0",
-    "canvas2image": "^1.0.5",
+    "html2canvas": "^1.0.0-rc.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "build-dev": "dotenv -e .env.development react-scripts build",
+    "build-prod": "dotenv -e .env.production react-scripts build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
