--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aframe-extras": "^6.0.1",
     "aframe-react": "^4.4.0",
     "axios": "^0.19.0",
+    "canvas2image": "^1.0.5",
     "html2canvas": "^1.0.0-rc.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
