--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "aframe-extras": "^6.0.1",
     "aframe-react": "^4.4.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "canvas2image": "^1.0.5",
     "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
