--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "aframe": "^0.9.2",
-    "aframe-extras": "^6.0.1",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "a-frame": "0.0.0",
+    "aframe": "^1.0.4",
+    "aframe-extras": "^6.1.1",
     "aframe-react": "^4.4.0",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.4.1",
-    "canvas2image": "^1.0.5",
-    "html2canvas": "^1.0.0-rc.5",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "query-string": "^6.13.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2"
   },
